force-app/main/default/objects/Rating__c/Rating__c.object-meta.xml
<CustomObject>
    <label>Rating</label>
    <nameField>
        <displayFormat>RID-{000}</displayFormat>
        <label>Rating ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>