force-app/main/default/objects/Rating__c/fields/Rating_For__c.field-meta.xml
<CustomField>
    <fullName>Rating_For__c</fullName>
    <label>Rating For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>