force-app/main/default/objects/Rating__c/fields/Rating_Given_To_Which_Student__c.field-meta.xml
<CustomField>
    <fullName>Rating_Given_To_Which_Student__c</fullName>
    <label>Rating Given To Which Student</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Student__c.Course_Opted__c</field>
            <operation>equals</operation>
            <value>Angular, Salesforce Admin, Salesforce Developer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>