force-app/main/default/objects/Rating__c/fields/Rating_Out_Of_10__c.field-meta.xml
<CustomField>
    <fullName>Rating_Out_Of_10__c</fullName>
    <label>Rating Out Of 10</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>